--- a/smart-calendar/src/app/layouts/main-layout/main-layout.html
+++ b/smart-calendar/src/app/layouts/main-layout/main-layout.html
@@ -19,7 +19,7 @@
         (sidebarToggle)="toggleSidebar()"
         (themeToggle)="toggleTheme()"
         (profileClick)="openProfile()"
-        (notificationsClick)="openNotifications()">
+        (notificationClick)="openNotifications()">
       </app-header>
     </header>
 
