--- a/smart-calendar/src/assets/styles/_responsive-utilities.scss
+++ b/smart-calendar/src/assets/styles/_responsive-utilities.scss
@@ -1,6 +1,6 @@
 // Advanced Responsive Utilities
-@import 'breakpoints';
-@import 'variables';
+@use 'breakpoints' as *;
+@use 'variables' as *;
 
 // Responsive Visibility Classes
 .show-mobile {
