--- a/smart-calendar/src/assets/styles/_responsive.scss
+++ b/smart-calendar/src/assets/styles/_responsive.scss
@@ -1,5 +1,5 @@
 // Advanced Responsive System
-@import 'breakpoints';
+@use 'breakpoints' as *;
 
 // Container Queries (Modern approach)
 @mixin container-query($min-width) {
