--- a/smart-calendar/src/app/features/calendar/calendar/calendar.component.scss
+++ b/smart-calendar/src/app/features/calendar/calendar/calendar.component.scss
@@ -1,6 +1,6 @@
-@import '../../../../assets/styles/variables';
-@import '../../../../assets/styles/mixins';
-@import '../../../../assets/styles/breakpoints';
+@use '../../../../assets/styles/variables' as *;
+@use '../../../../assets/styles/mixins' as *;
+@use '../../../../assets/styles/breakpoints' as *;
 
 .calendar-container {
   padding: var(--space-6);
