--- a/smart-calendar/src/app/shared/components/header/header.component.scss
+++ b/smart-calendar/src/app/shared/components/header/header.component.scss
@@ -1,6 +1,6 @@
-@import '../../../../assets/styles/variables';
-@import '../../../../assets/styles/mixins';
-@import '../../../../assets/styles/breakpoints';
+@use '../../../../assets/styles/variables' as *;
+@use '../../../../assets/styles/mixins' as *;
+@use '../../../../assets/styles/breakpoints' as *;
 
 @keyframes badgePulse {
   0%, 100% { transform: scale(1); }
